force-app/main/default/objects/IL_Data_Low__c/IL_Data_Low__c.object-meta.xml
<CustomObject>
    <label>IL Data Low</label>
    <nameField>
        <displayFormat>ILDL-{00000}</displayFormat>
        <label>IL Data Low Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IL Data Low</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>