force-app/main/default/objects/IL_Data_Low__c/fields/Census_Data__c.field-meta.xml
<CustomField>
    <fullName>Census_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Census Data</label>
    <referenceTo>Census_Data__c</referenceTo>
    <relationshipLabel>IL Data Low</relationshipLabel>
    <relationshipName>IL_Data_Low</relationshipName>
    <type>Lookup</type>
</CustomField>