force-app/main/default/objects/IL_Data_Low__c/fields/IL_80_P3__c.field-meta.xml
<CustomField>
    <fullName>IL_80_P3__c</fullName>
    <label>IL 80 P3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>